--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,52 @@ html {
     width: 100%;
     height: 100%;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0px 50px 0px;
+}
+#game-border {
+    width: 500px;
+    height: 800px;
+    border: 5px solid black;
+}
+
+#game-main {
+    justify-content: center;
+    align-items: center;
+
+}
+
+.button {
+    width: 300px;
+    height: 300px;
+    background-color: grey;
+    border-radius: 100%;
+    position: absolute;
+}
+
+#red {
+
+}
+
+#yellow {
+
+}
+
+#blue {
+
+}
+
+#green {
+
+}
+
+#starter {
+    width: 200px;
+    height: 50px;
+    position:relative
+}
