--- a/css/style.css
+++ b/css/style.css
@@ -3,51 +3,85 @@ html {
     height: 100%;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+
 body {
+    height: 100%;
+    font-family: "Poppins", sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 50px 0px 50px 0px;
+    margin: 0;
 }
+
 #game-border {
-    width: 500px;
+    width: 700px;
     height: 800px;
     border: 5px solid black;
+    margin: 50px 0px 50px 0px;
+}
+
+h1 {
+font-size: 50px;
 }
 
 #game-main {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    max-width: 400px; 
+    margin: 0px 0px 50px 0px;
 }
 
 .button {
-    width: 300px;
-    height: 300px;
-    background-color: grey;
+    width: 150px;
+    height: 150px;
     border-radius: 100%;
-    position: absolute;
+    border: 5px solid rgb(0, 0, 0);
+    display: grid;
+    float: left;
 }
 
 #red {
-
+    background-color: red;
+    border-top-left-radius: 100%;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-color: red;
 }
 
 #yellow {
-
+    background-color: yellow;
+    border-top-left-radius: 0;
+    border-top-right-radius: 100%;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-color: yellow;
 }
 
 #blue {
-
+    background-color: blue;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 100%;
+    border-color: blue;
 }
 
 #green {
-
+    background-color: green;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 100%;
+    border-bottom-left-radius: 0;
+    border-color: green;
 }
 
 #starter {
     width: 200px;
     height: 50px;
-    position:relative
+    margin: 50px 0px 50px 0px;
 }
