--- a/css/style.css
+++ b/css/style.css
@@ -105,13 +105,16 @@ h1 {
     top: 180px;
 }
 
-/* @keyframes fadeOut {
-    to {
-        opacity: 0;
-        visibility: hidden;
+@media only screen and (max-width: 500px) {
+    #game-border {
+        border: 5px solid rgba(0, 0, 0, 0);
+    }
+    .color {
+        max-width: 180px;
+        max-height: 180px;
+    }
+    #message {
+        font-size: 40px;
+        top: 250px;
     }
 }
-
-#game-main.fade-out {
-    animation: fadeOut 0.5s forwards;
-} */
